corrected items name length in item list card, aligned text inside the item list card in the center and added colours to my purchases list

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -14,11 +14,6 @@
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
-.item-list-card {
- display: grid;
- grid-template-columns: 1fr 3fr 1fr 2fr 4fr 2fr;
-}
-
 .list-group-item {
   margin: 3px;
   background: linear-gradient(90deg, rgba(80, 86, 136, 0.5) 0%, rgba(37, 109, 72, 0.5) 100%);
@@ -43,6 +38,13 @@
   text-overflow: ellipsis;
   color: white;
   text-decoration: none;
+}
+
+.posted-item-name {
+  width: 184px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .purchase-item-name {
